--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://146.103.122.171:3001/api
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
 NEXT_PUBLIC_DEFAULT_LOCALE=ru
 NEXT_PUBLIC_LOCALES="ru,uk,ua,pl"
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao
