--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,8 +113,8 @@ services:
       start_period: 40s
 
 volumes:
-  postgres_data:
-  redis_data:
+  backend_postgres_data:
+  backend_redis_data:
 
 
 networks:
