--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     container_name: max-postgres
-    image: postgres:latest
+    image: postgres:16
     restart: always
     env_file:
       - .env
